--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # Ignore sensitive information
 /web/sites/*/settings.php
 /web/sites/*/settings.local.php
+/web/sites/default/services.local.yml
 
 # Ignore Drupal's file directory
 /web/sites/*/files/
