--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "drupal/image_url_formatter": "^1.0@beta",
         "drupal/pathauto": "^1.0",
         "drupal/simplenews": "^1.0@alpha",
+        "drupal/smtp": "^1.0@beta",
         "drupal/token": "^1.0",
         "drupal/views_infinite_scroll": "^1.5",
         "drush/drush": "~8.0",
