adding countdown timer module

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/field_collection": "^1.0@alpha",
         "drupal/gdoc_field": "^1.0",
         "drupal/image_url_formatter": "^1.0@beta",
+        "drupal/jquery_countdown_timer": "^1.1",
         "drupal/pathauto": "^1.0",
         "drupal/simplenews": "^1.0@alpha",
         "drupal/smtp": "^1.0@beta",
