--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/gdoc_field": "^1.0",
         "drupal/image_url_formatter": "^1.0@beta",
         "drupal/pathauto": "^1.0",
+        "drupal/simple_timeline": "^1.1",
         "drupal/simplenews": "^1.0@alpha",
         "drupal/smtp": "^1.0@beta",
         "drupal/token": "^1.0",
