--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/admin_toolbar": "^1.20",
         "drupal/block_visibility_groups": "^1.1",
+        "drupal/colorbox": "^1.4",
         "drupal/console": "~1.0",
         "drupal/contact_block": "^1.4",
         "drupal/core": "~8.0",
