--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/core": "~8.0",
         "drupal/ctools": "^3.0",
         "drupal/dropdown_language": "^1.2",
+        "drupal/entity_browser": "^1.3",
         "drupal/field_collection": "^1.0@alpha",
         "drupal/gdoc_field": "^1.0",
         "drupal/iframe": "^1.7",
