--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "drupal/image_url_formatter": "^1.0@beta",
         "drupal/jquery_countdown_timer": "^1.1",
         "drupal/pathauto": "^1.0",
+        "drupal/redirect": "^1.0@beta",
         "drupal/simple_timeline": "^1.1",
         "drupal/simplenews": "^1.0@alpha",
         "drupal/smtp": "^1.0@beta",
